finish the first lesson